--- a/index.html
+++ b/index.html
@@ -133,9 +133,18 @@
                 <p>Have a Good Journey</p>
             </div>
         </section>
+        <!-- Error Section -->
+        <section id="Error-section">
+            <div id="Error-content">
+                <h1>ERROR!</h1>
+                <h4>Please Add Some Tickets Before Booking</h4>
+                <button onclick="error()" id="Error-Button">Back</button>
+            </div>
+        </section>
     </main>
 
     <!--Thank You-->
+    <!-- JavaScript -->
     <script src="setting.js"></script>
 </body>
 
